--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Подбор рецепта - Главная</title>
-<link rel="stylesheet" href="../index/index.css">
+<link rel="stylesheet" href="index/index.css">
 </head>
 <body>
 <!-- Навигация -->
@@ -102,4 +102,5 @@
 </footer>
 <script src="../index/index.js"></script>
 </body>
+
 </html>
