--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <nav class="navbar">
 <div class="nav-container">
     <a href="../index/index.html" class="logo-wrapper">
-        <img src="index/images/logo/logo.png" alt="Логотип" class="logo-icon">
+        <img src="images/logo/logo.png" alt="Логотип" class="logo-icon">
         <span class="logo-text">Подбор рецепта</span>
     </a>
     <ul class="nav-menu">
@@ -104,4 +104,5 @@
 </body>
 
 </html>
+
 
