--- a/index.html
+++ b/index.html
@@ -92,17 +92,18 @@
 <footer>
     <div class="footer-content">
         <ul class="footer-links">
-    <li><a href="../index/index.html">Главная</a></li>
-    <li><a href="../search/search.html">Поиск рецептов</a></li>
-    <li><a href="../catalog/catalog.html">Каталог рецептов</a></li>
-    <li><a href="../advice/advice.html">Советы</a></li>
+    <li><a href="index.html">Главная</a></li>
+    <li><a href="search/search.html">Поиск рецептов</a></li>
+    <li><a href="catalog/catalog.html">Каталог рецептов</a></li>
+    <li><a href="advice/advice.html">Советы</a></li>
         </ul>
         <p class="copyright">© 2025 Подбор рецепта. Все права защищены.</p>
     </div>
 </footer>
-<script src="../index/index.js"></script>
+<script src="index/index.js"></script>
 </body>
 
 </html>
+
 
 
