--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <span class="logo-text">Подбор рецепта</span>
     </a>
     <ul class="nav-menu">
-        <li class="nav-item"><a href="../index/index.html" class="nav-link">Главная</a></li>
-        <li class="nav-item"><a href="../search/search.html" class="nav-link active">Поиск рецептов</a></li>
-        <li class="nav-item"><a href="../catalog/catalog.html" class="nav-link">Каталог рецептов</a></li>
-        <li class="nav-item"><a href="../advice/advice.html" class="nav-link">Советы</a></li>
+        <li class="nav-item"><a href="index.html" class="nav-link">Главная</a></li>
+        <li class="nav-item"><a href="search/search.html" class="nav-link active">Поиск рецептов</a></li>
+        <li class="nav-item"><a href="catalog/catalog.html" class="nav-link">Каталог рецептов</a></li>
+        <li class="nav-item"><a href="advice/advice.html" class="nav-link">Советы</a></li>
     </ul>
     <div class="hamburger">
         <span class="bar"></span>
@@ -104,6 +104,7 @@
 </body>
 
 </html>
+
 
 
 
