--- a/search/search.html
+++ b/search/search.html
@@ -2031,7 +2031,7 @@
                     <div class="search-input-group">
                         <div class="input-with-icon">
                             <i class="fas fa-search"></i>
-                            <input type="text" placeholder="Название блюда или ингредиент" class="search-input" id="basic-query">
+                            <input type="text" placeholder="Название блюда" class="search-input" id="basic-query">
                         </div>
                     </div>
                     
@@ -2656,4 +2656,5 @@
 <script src="../index/index.js"></script>
 <script src="../search/search.js"></script>
 </body>
+
 </html>
